@@ -123,7 +123,8 @@ def init_faulthandler(fileobj=sys.__stderr__):
         # start.
         return
     faulthandler.enable(fileobj)
-    if hasattr(faulthandler, 'register') and hasattr(signal, 'SIGUSR1'):
+    if (hasattr(faulthandler, 'register') and hasattr(signal, 'SIGUSR1') and
+            sys.stderr is not None):
         # If available, we also want a traceback on SIGUSR1.
         # pylint: disable=no-member,useless-suppression
         faulthandler.register(signal.SIGUSR1)
